Added a basic blank canvas

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,6 @@
 <style>
 	body{background-color:lime}
 </style>
-
 </head>
 
 <body>
@@ -22,5 +21,9 @@
 		<button id="supportbutton">Support</button>
 		<button id="aboutusbutton">About Us</button>
 	</div>
-
+	<div id="gamearea">
+		<canvas id="gameCanvas" width="400" height="400" backgroundcolor="blue">
+		</canvas>
+	</div>
+	<script src="canvascode.js"></script>
 </body>
