--- a/homepage2.html
+++ b/homepage2.html
@@ -32,6 +32,10 @@
 </header>
 <main>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div id="gamearea">
+    <canvas id="c" width="400" height="400" backgroundcolor="blue">
+    </canvas>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="snake.jpg" width="964" height="700"  class="d-block w-100" alt="First slide">
@@ -54,11 +58,8 @@
 </div>
 </main>
 </div>
-<div id="gamearea">
-  <canvas id="gameCanvas" width="400" height="400" backgroundcolor="blue">
-  </canvas>
-</div>
-<script src="canvascode.js"></script>
+<script src="canv3.js"></script>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
