--- a/homepage2.html
+++ b/homepage2.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mr-auto"></div>
         <div class="navbar-nav">
-        <a class="nav-link" href="#">New Game<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" value="Refresh Page" onClick="window.location.reload();">New Game<span class="sr-only">(current)</span></a>
         <a class="nav-link" href="#">Play/Pause</a>
         <a class="nav-link" href="#">Instructions</a>
         <a class="nav-link" href="#">Similiar Games</a>
@@ -32,19 +32,31 @@
 </header>
 <main>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div id="gamearea">
+  <div id="gamearea" style="float:left;">
     <canvas id="c" width="400" height="400" backgroundcolor="blue">
     </canvas>
   </div>
-  <div class="carousel-inner">
+  <div id="scoreboard"  style="float:left;">
+    <h4>&nbsp&nbspHIGHSCORES</h4>
+    <ol>
+      <li id="one"></li>
+      <li id="two"></li>
+      <li id="three"></li>
+      <li id="four"></li>
+      <li id="five"></li>
+    </ol>
+    <h4>&nbsp&nbspCURRENT SCORE:</h4>
+    <h4 id = "currscore">5</h4>
+  </div>
+  <div class="carousel-inner" style="float:left;">
     <div class="carousel-item active">
-      <img src="snake.jpg" width="964" height="700"  class="d-block w-100" alt="First slide">
+      <img src="snake.jpg" width="100" height="100"  class="d-block w-100" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img src="snake1.jpg"  height="700" class="d-block w-100" alt="Second slide">
+      <img src="snake1.jpg"  height="100" class="d-block w-100" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img src="snake2.jpg" height="700" class="d-block w-100" alt="Third slide">
+      <img src="snake2.jpg" height="100" class="d-block w-100" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
