--- a/homepage2.html
+++ b/homepage2.html
@@ -32,33 +32,35 @@
 </header>
 <main>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div id="gamearea" style="float:left;">
-    <canvas id="c" width="400" height="400" backgroundcolor="blue">
-    </canvas>
-  </div>
-  <div id="scoreboard"  style="float:left;">
-    <h4>&nbsp&nbspHIGHSCORES</h4>
+
+
+  <div class="carousel-inner" >
+    <div id="gamearea" style="float:left;">
+      <canvas id="c" width="400" height="400" backgroundcolor="blue">
+      </canvas>
+    </div>
+    <div class="carousel-item active" style="float:left">
+      <img src="snake.jpg"  height="400" width="100" class="d-block w-100" alt="First slide">
+    </div>
+    <div class="carousel-item"style="float:left" >
+      <img src="snake1.jpg"  height="400" width="100" class="d-block w-100" alt="Second slide">
+    </div>
+    <div class="carousel-item"style="float:left" >
+      <img src="snake2.jpg"  height="400" width="100" class="d-block w-100" alt="Third slide">
+    </div>
+      </div>
+
+  <div id="scoreboard"  style="float:center;">
+    <h5>&nbsp&nbspHIGHSCORES</h5>
     <ol>
       <li id="one"></li>
       <li id="two"></li>
       <li id="three"></li>
-      <li id="four"></li>
-      <li id="five"></li>
     </ol>
-    <h4>&nbsp&nbspCURRENT SCORE:</h4>
-    <h4 id = "currscore">5</h4>
+    <h5>&nbsp&nbspCURRENT SCORE:</h5>
+    <h5 id = "currscore">0</h5>
   </div>
-  <div class="carousel-inner" style="float:left;">
-    <div class="carousel-item active">
-      <img src="snake.jpg" width="100" height="100"  class="d-block w-100" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img src="snake1.jpg"  height="100" class="d-block w-100" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img src="snake2.jpg" height="100" class="d-block w-100" alt="Third slide">
-    </div>
-  </div>
+
   <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -69,7 +71,8 @@
   </a>
 </div>
 </main>
-</div>
+</div >
+
 <script src="canv3.js"></script>
 
 
