--- a/instructions.html
+++ b/instructions.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mr-auto"></div>
         <div class="navbar-nav">
-        <a class="nav-link" href="http://localhost:8080/web-tech/homepage2.html" value="Refresh Page" onClick="window.location.reload();">New Game<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="homepage.html" value="Refresh Page" onClick="window.location.reload();">New Game<span class="sr-only">(current)</span></a>
         <!--a class="nav-link" href="#">Play/Pause</a-->
         <a class="nav-link" href="#">Instructions</a>
         <a class="nav-link" target = "_blank" href="https://www.google.com/search?q=snake+like+games&oq=snake+like+games&aqs=chrome..69i57j0l4j69i60.2586j1j9&sourceid=chrome&ie=UTF-8">Similiar Games</a>
