--- a/homepage.html
+++ b/homepage.html
@@ -72,7 +72,7 @@
 </main>
 </div >
 
-<script src="canv3.js"></script>
+<script src="canvas.js"></script>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
